--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,22 +13,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-11-28 Wed 16:22]
-| <75>                                                                        |          |        |        |       |
-| Headline                                                                    | Time     |        |        |     % |
-|-----------------------------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                                                | *136:32* |        |        |   0.0 |
-|-----------------------------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                                                     | 136:32   |        |        |   0.0 |
-| Active                                                                      |          | 136:32 |        |   0.0 |
-| Edit release notes for previous sprint                                      |          |        |   2:03 |   0.0 |
-| Sprint and product backlog grooming                                         |          |        |   3:10 |   0.0 |
-| Work on MASD theory                                                         |          |        | 113:38 |   0.0 |
-| Read up on framework and API design                                         |          |        |   0:57 |   0.0 |
-| Rename models to fit MASD architecture                                      |          |        |   4:56 |   0.0 |
-| Great meta-data rename                                                      |          |        |   4:54 |   0.0 |
-| Create the =orchestration= model                                            |          |        |   4:15 |   0.0 |
-| Clean up the mess of refactors in dogen core                                |          |        |   2:39 |   0.0 |
+#+CAPTION: Clock summary at [2019-02-04 Mon 12:08]
+| <75>                                         |          |        |        |       |
+| Headline                                     | Time     |        |        |     % |
+|----------------------------------------------+----------+--------+--------+-------|
+| *Total time*                                 | *136:48* |        |        |   0.0 |
+|----------------------------------------------+----------+--------+--------+-------|
+| Stories                                      | 136:48   |        |        |   0.0 |
+| Active                                       |          | 136:48 |        |   0.0 |
+| Edit release notes for previous sprint       |          |        |   2:03 |   0.0 |
+| Sprint and product backlog grooming          |          |        |   3:10 |   0.0 |
+| Work on MASD theory                          |          |        | 113:38 |   0.0 |
+| Read up on framework and API design          |          |        |   0:57 |   0.0 |
+| Rename models to fit MASD architecture       |          |        |   4:56 |   0.0 |
+| Great meta-data rename                       |          |        |   4:54 |   0.0 |
+| Create the =orchestration= model             |          |        |   4:15 |   0.0 |
+| Clean up the mess of refactors in dogen core |          |        |   2:55 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -198,6 +198,56 @@ Work on defining the theory for MASD:
 
 We need to move the dogen project to the new directory layout whereby
 all models are kept in the =models= directory.
+
+*** COMPLETED ODB source files are generated when ODB is off          :story:
+    CLOSED: [2019-02-04 Mon 11:49]
+
+Even when the ODB facet is off, we still get the following in CMake:
+
+: set(odb_files "")
+: file(GLOB_RECURSE odb_files RELATIVE
+:   "${CMAKE_CURRENT_SOURCE_DIR}/"
+:   "${CMAKE_CURRENT_SOURCE_DIR}/*.cxx")
+: set(files ${files} ${odb_files})
+
+This should only be generated if ODB is on.
+
+Actually the problem is slightly more complicated. We are only adding
+these lines if ODB is on, but however, we may have switched ODB on but
+not defined classes with ODB stereotypes. In this case we do not
+generate any pragmas, and thus no ODB files. However, the ODB flag is
+still on so we add the above file inclusion. To make this in the most
+clean possible manner, we'd have to check to see if any ODB files were
+generated to determine if there is a need to add them. However, this
+is probably non-trivial because we only have a list of files after
+template expansion. The simplest way may be to do a transform that
+looks for ODB stereotypes and marks a flag at model level.
+
+Actually we already had solved this problem:
+
+:        if (a.is_odb_facet_enabled() && !c.odb_targets().targets().empty()) {
+
+We can reuse this machinery.
+
+*** COMPLETED Split ODB executable from ODB libraries in CMake        :story:
+    CLOSED: [2019-02-04 Mon 11:49]
+
+In order to compile on Travis using vcpkg, we need to detect the ODB
+executable separately from the ODB libraries. We have the following
+cases:
+
+- if ODB facet is off, no ODB related code should be emitted.
+- if ODB facet is on, it is the responsibility of the containing
+  project to ensure that at least the ODB libraries have been found
+  (or that the project has been excluded from the build). We should
+  refuse to continue if they are not present.
+- if the ODB compiler has not been found, we should not include the
+  ODB targets.
+
+*** COMPLETED SQLite backend is misspelled                            :story:
+    CLOSED: [2019-02-04 Mon 12:08]
+
+At present we are calling SQLite =sqllite=. Fix this.
 
 *** STARTED Read up on framework and API design                       :story:
     :LOGBOOK:
